--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@upstash/redis": "^1.28.4",
+    "date-fns": "^3.5.0",
     "nanoid": "^5.0.6",
     "next": "14.1.3",
     "react": "^18",
@@ -23,6 +24,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.1.3",
     "postcss": "^8",
+    "prettier": "3.2.5",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
   }
